# py_lambda_concurrency

./: .gitignore  app.py  pool.py  pool_async.py  pool_process.py  pool_thread.py  py_lambda_concurrency_lambda.tf
code/: app.py  constants.py  pool_process.py  pool_thread.py  py_lambda_concurrency_lambda.tf  pyproject.toml  sort.py  stress.py  stress_script.py  tasks.py
code/data_analysis/: cpu_bounded_func.ipynb  cpu_bounded_func_1.pickle  cpu_bounded_func_100.pickle  cpu_bounded_func_20.pickle  cpu_bounded_func_quick_20.pickle  cpu_bounded_func_quick_200.pickle  io_bounded_func.ipynb  io_bounded_func_200.pickle  io_bounded_func_2000.pickle
docs/: index.html
slides/: index.html
