[tool.poetry]
name = "py_lambda_concurrency"
version = "0.1.0"
description = ""
authors = ["Giuseppe Sorrentino <uhpnou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
boto3 = "^1.12.28"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
